# snake

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
src/: main.cc
